Extract ShardAllocationConfiguration to a separate class